--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>sendplot</title>
+    <title>RI-COVID-19-Cases-Map</title>
     <style type="text/css">
         /* CSS GOES HERE */
         .plot {border:1px solid #CCCCCC;display:block;overflow:auto;padding:5px;
